crates/stems-core/tests/snapshots/graph_render__graph-chain.snap
---
source: crates/stems-core/tests/graph_render.rs
expression: text(&l)
---
┌───────┐      ┌───────┐      ┌──────┐
│ web · ├─────▶│ api · ├─────▶│ db · │
└───────┘      └───────┘      └──────┘
