crates/stems-core/tests/snapshots/graph_render__graph-diamond.snap
---
source: crates/stems-core/tests/graph_render.rs
expression: text(&l)
---
               ┌─────────┐
           ╭──▶│ left  · ├──╮
┌───────┐  │   └─────────┘  │   ┌────────┐
│ top · ├──┤                ├──▶│ base · │
└───────┘  │   ┌─────────┐  │   └────────┘
           ╰──▶│ right · ├──╯
               └─────────┘
