crates/stems-core/tests/snapshots/graph_render__graph-focus.snap
---
source: crates/stems-core/tests/graph_render.rs
expression: "text(&hello_shop().focus(\"shop-api\"))"
---
                                        ┌────────────┐
                                    ╭──▶│ postgres · │
┌────────────┐      ┌────────────┐  │   └────────────┘
│ shop-web · ├─────▶│ shop-api · ├──┤
└────────────┘      └────────────┘  │   ┌────────────┐
                                    ╰──▶│ redis    · │
                                        └────────────┘
