crates/stems-core/tests/snapshots/graph_render__graph-hello-shop-ascii.snap
---
source: crates/stems-core/tests/graph_render.rs
expression: "render_text(&hello_shop(), &opts)"
---
+------------+      +---------------+        +------------+
| shop-web - +----->| shop-api    - +--+-+-->| postgres - |
+------------+      +---------------+  | |   +------------+
                                       | |
                    +---------------+  | |   +------------+
                    | shop-worker - +--+-+-->| redis    - |
                    +---------------+        +------------+

                                             +------------+
                                             | httpbin  - |
                                             +------------+
