crates/stems-core/tests/snapshots/graph_render__graph-hello-shop-narrow.snap
---
source: crates/stems-core/tests/graph_render.rs
expression: out
---
┌────────────┐
│ shop-web · ├─────▶ shop-api
└────────────┘

┌───────────────┐        ┌────────────┐
│ shop-api    · ├──┬─┬──▶│ postgres · │
└───────────────┘  │ │   └────────────┘
                   │ │
┌───────────────┐  │ │   ┌────────────┐
│ shop-worker · ├──┴─┴──▶│ redis    · │
└───────────────┘        └────────────┘

                         ┌────────────┐
                         │ httpbin  · │
                         └────────────┘
