crates/stems-core/tests/snapshots/graph_render__graph-hello-shop.snap
---
source: crates/stems-core/tests/graph_render.rs
expression: text(&hello_shop())
---
┌────────────┐      ┌───────────────┐        ┌────────────┐
│ shop-web · ├─────▶│ shop-api    · ├──┬─┬──▶│ postgres · │
└────────────┘      └───────────────┘  │ │   └────────────┘
                                       │ │
                    ┌───────────────┐  │ │   ┌────────────┐
                    │ shop-worker · ├──┴─┴──▶│ redis    · │
                    └───────────────┘        └────────────┘

                                             ┌────────────┐
                                             │ httpbin  · │
                                             └────────────┘
